# test

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
artifacts/data/processed/: sales_preprocessed.csv  sales_transformed.csv
artifacts/data/split/: test.csv  test_features.csv  train.csv  train_features.csv
artifacts/evaluation/: evaluation_report.txt  test_metrics.json  test_predictions.csv
artifacts/models/: feature_importance.csv  metrics.json  random_forest_model.joblib
docs/: DATA_DICTIONARY.md  REPONSES.md
notebooks/: 01_eda.ipynb  01_eda.md
src/: __init__.py
src/api/: app.py
src/dashboard/: app.py
src/etl/: README.md  __init__.py  features.py  load.py  run_pipeline.py  split.py  transform.py
src/evaluate/: evaluate.py
src/train/: __init__.py  train_model.py
tests/: __init__.py  test_etl.py  test_models.py
